avoiding rdkit draw

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+python_version < 3.11
+
+--extra-index-url https://pypi.anaconda.org/rdkit/simple
+
+numpy<2
 streamlit>=1.45
 pandas
 biopython
@@ -12,5 +17,4 @@ psycopg2-binary
 formula_validation
 git+https://github.com/Wang-Bioinformatics-Lab/GNPSDataPackage.git
 dash_extensions
---extra-index-url https://pypi.anaconda.org/rdkit/simple
-rdkit-pypi
+rdkit
